--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">SGOnayApp</string>
+    <string name="title_activity_login">Вход</string>
+    <string name="title_activity_tasks">Задания</string>
+    <string name="title_activity_games">Доступные игры</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_login">Название команды</string>
+    <string name="prompt_password">Пароль</string>
+    <string name="button_sign_in">Вход</string>
 </resources>
