--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_activity_login">Вход</string>
     <string name="title_activity_tasks">Задания</string>
     <string name="title_activity_games">Доступные игры</string>
+    <string name="wrong_login_or_password">Неверное название команды или пароль!</string>
 
     <!-- Strings related to login -->
     <string name="prompt_login">Название команды</string>
