--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_activity_games">Доступные игры</string>
     <string name="empty_forms">Введите название команды и пароль</string>
     <string name="wrong_credentials">Неверные данные!</string>
+    <string name="not_logged_in">Вы не вошли в систему</string>
 
     <!-- Strings related to login -->
     <string name="prompt_login">Название команды</string>
@@ -15,4 +16,5 @@
     <string name="title_answer">Ответ</string>
     <string name="signup_text"><a href="http://sgonay.96.lt/registration.php">Нет аккаунта? Создать новый</a></string>
     <string name="image_content">SGOnay logo</string>
+    <string name="exit_text">Выйти</string>
 </resources>
