problem with sending russian text in login form on Android 4.4 and lower was resolved

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="signup_text"><a href="http://sgonay.96.lt/registration.php">Нет аккаунта? Создать новый</a></string>
     <string name="image_content">SGOnay logo</string>
     <string name="exit_text">Выйти</string>
+    <string name="waiting_text">Ожидайте...</string>
 </resources>
