--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,11 +22,12 @@
     <string name="no_answer">Вы не ввели ответ!</string>
     <string name="waiting_games_text">Загрузка игр...</string>
     <string name="waiting_sending_answers_text">Отправка ответа...</string>
-    <string name="answer_false_txt">Возможно вы финишировали или время кончилось</string>
+    <string name="answer_false_txt">Возможно вы финишировали или время истекло</string>
     <string name="start_game_message">Вы уверены, что хотите стартовать в игре?</string>
     <string name="start_text">Да</string>
     <string name="start_game_title">Старт</string>
-    <string name="points_text">Очки: </string>
+    <string name="points_text">Очки: %1s</string>
     <string name="sgonay_text">SGOnay#%1s</string>
     <string name="minutes_text">мин. %1s</string>
+    <string name="signed_in_text">Вы вошли!</string>
 </resources>
