--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SGOnay</string>
-    <string name="answer_false_txt">Maybe you finished or the time ran out</string>
+    <string name="answer_false_txt">Maybe you finished or the time is up</string>
     <string name="button_answer">Confirm</string>
     <string name="button_sign_in">Sign In</string>
     <string name="exit_text">Enter the command name and password</string>
@@ -26,8 +26,9 @@
     <string name="start_game_message">Are you sure you want to start in the game?</string>
     <string name="prompt_login">Team name</string>
     <string name="prompt_answer">Answer</string>
-    <string name="points_text">Points:</string>
+    <string name="points_text">Points: %1s</string>
     <string name="not_logged_in">You are not signe in</string>
     <string name="no_answer">You did not enter the answer!</string>
     <string name="empty_forms">Enter team name and password</string>
+    <string name="signed_in_text">You are logged in!</string>
 </resources>
